--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ celerybeat.pid
 .env
 .venv
 env/
+shumivenv/
 venv/
 ENV/
 env.bak/
@@ -127,3 +128,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+#idea
+.idea/
+
+#vs
+.vs/
